
wx.wizard.Wizard:  Add a new EVT_WIZARD_PAGE_SHOWN event.

Added wx.InfoBar, which is similar to the message bar in browser
windows that is shown above or below the content window to display
messages and/or buttons in a way that doesn't interupt the user's
workflow like a modal message dialog does, but is much more noticeble
than simply putting some text in the status bar.






2.9.0.1
-------
* 22-Jan-2010

NOTE: This release was done mainly to get a 2.9.x preview build out to
the wxPython contributors to use for testing their code with wxPython
2.9.  There will not be a general official release of this version.

NOTE: When using the stock Apple Python on OS X 10.6 it will default
to running in 64-bit mode if your machine is a 64-bit architecture.
wxPython is still using Carbon on OS X which is 32-bit only, so there
is no 64-bit personality in the universal binaries and it will raise
an exception when you import wx.  wxPython will be switching to Cocoa
soon, but in in the meantime you can force the stock Python to run in
32-bit mode by running this command in a Terminal session::

    defaults write com.apple.versioner.python Prefer-32-Bit -bool yes 


wxGTK: Implemented support for underlined fonts in wx.StaticText

wxGTK: wx.TopLevelWindow.SetSizeHints size increments now work

Added wx.EventBlocker class 

wxGTK: Make wx.TopLevelWindow.GetSize() return the size of the window
including the decorations (not just the client size) and updated
SetSize() to account for this as well.

wxMSW: For consistency with wxGTK, when a top level window is
minimized the size returned from GetSize will be the restored size,
not the size of the icon window.

wxGTK: For consistency with wxMSW, when a top level window is
minimized the size returned from GetClientSize will be (0,0).

wxGTK: Color cursors now supported.

Added wx.DC.StretchBlit() for wxMac and wxMSW (Vince Harron)

Added support for labels for toolbar controls (Vince Harron)
