@@ -227,6 +227,10 @@ void wxPyEndBlockThreads(wxPyBlock_t blocked);
 #define wxPyRaiseNotImplemented() \
     wxPyBLOCK_THREADS(PyErr_SetNone(PyExc_NotImplementedError))
 
+// Raise the NotImplementedError exception with a message  (blocking threads)
+#define wxPyRaiseNotImplementedMsg(msg) \
+    wxPyBLOCK_THREADS(PyErr_SetString(PyExc_NotImplementedError, msg))
+
 // Raise any exception with a string value  (blocking threads)
 #define wxPyErr_SetString(err, str) \
     wxPyBLOCK_THREADS(PyErr_SetString(err, str))
